<resources>
    <string name="app_name">Cronometro</string>
    <string name="btn_start">Iniciar</string>
    <string name="btn_pause">Pausar</string>
    <string name="btn_lap">Vuelta</string>
    <string name="btn_stop">Reiniciar</string>
    <string name="time">00:00:00:00</string>
    <string name="numeroVuelta">Vuelta</string>
    <string name="tiempoParcial">Tiempo Parcial</string>
    <string name="tiempoTotal">Tiempo Total</string>
</resources>